# finance-agent-orchestration

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README.md  nixpacks.toml  render.yaml  requirements.txt  serve.py  start.sh  vercel.json
api/: index.py
api/finance_agents/src/finance_agents/tools/: market_data_tool.py  zerodha_tool.py
backend/: .env  .env.example  Dockerfile  requirements.txt
backend/app/: cerebras_llm.py  config.py  crew_runner.py  main.py  models.py  zerodha_auth.py
finance_agents/: .gitignore  README.md  pyproject.toml
finance_agents/src/finance_agents/: main.py
finance_agents/src/finance_agents/crews/investment_crew/: investment_crew.py
finance_agents/src/finance_agents/crews/investment_crew/config/: agents.yaml  tasks.yaml
finance_agents/src/finance_agents/tools/: __init__.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: InvestmentForm.css  InvestmentForm.jsx  ResultPanel.css  ResultPanel.jsx  StatusBar.css  StatusBar.jsx  ZerodhaCallback.jsx
