[project]
name = "finance_agents"
version = "0.1.0"
description = "finance-agents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=1.14.5",
    "requests>=2.31.0",
    "kiteconnect>=5.0.1",
]

[project.scripts]
kickoff = "finance_agents.main:kickoff"
run_crew = "finance_agents.main:kickoff"
plot = "finance_agents.main:plot"
run_with_trigger = "finance_agents.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
